Fixed vertical alignment of volume slider

--- a/front/src/style/components/_volume_control.scss
+++ b/front/src/style/components/_volume_control.scss
@@ -24,7 +24,7 @@
     }
     input {
       max-width: 8.5em;
-      padding: 1em;
+      padding: 1em 0em;
     }
     &:not(:hover):not(.expanded) .popup {
       display: none;
